<resources>
    <string name="app_name">DLC IFMO</string>


    <string name="preference_file_key">my_application_preferences</string>
    <string name="preference_skip_login_key">skipLoginBoolean</string>
    <string name="preference_has_login_data_key">hasLoginData</string>
    <string name="preference_login_key">login</string>
    <string name="preference_password_key">password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->

    <!--<string name="permission_rationale">"Contacts permissions are needed for providing email-->
        <!--completions."-->
    <!--</string>-->
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="month_names">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_chose_semester">Выбрать семестр</string>
    <string name="no_data">Нет данных</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="version">Version</string>
    <string name="about_itmo_university">Itmo University</string>
    <string name="about_app_name">Distance Learning Center</string>
    <string name="about_contact_us">Contact us</string>
    <string name="journalTitle">Journal</string>
    <string name="subjectTypeCredit">Зачёт</string>
    <string name="subjectTypeExam">Экзамен</string>
    <string name="subjectTypeCourse">Курсовая работа</string>
    <string name="first_semester">1 семестр</string>
    <string name="second_semester">2 семестр</string>
    <string name="error_swipe">Ошибка. Ёпта. потяни вниз, чтобы обновить</string>
    <string name="withdraw_book">Отозвать</string>
    <string name="delete">Удалить</string>


    <!-- Strings related to login_activity -->
    <string name="title_activity_login">DLC authentication</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_email">DLC login</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_skip_login">Skip authentication</string>
    <string name="error_incorrect_data">Data is incorrect</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to main_activity -->
    <string name="position_in_rating">Rating position</string>
    <string name="journal">Journal</string>
    <string name="changes_protocol">Changes protocol</string>
    <string name="top_student">Top students</string>
    <string name="enroll">Enroll to DLC</string>
    <string name="settings">Settings</string>
    <string name="about_developers">About developers</string>
    <string name="log_out">Log out</string>
    <string name="full_rating">Full rating</string>
    <string name="course">курс</string>
    <string name="title_timetable">Расписание</string>
    <string name="enroll_failed">Запись не удалась</string>
    <string name="january">Январь</string>
    <string name="no_enroll_records">Похоже, у вас нет записей</string>


</resources>
