<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:mainActivity="com.akvone.dlcifmo.AboutActivity"
    tools:showIn="@layout/activity_about">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:id="@+id/imageView2"
            android:src="@drawable/itmo_white_logo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_itmo_university"
            android:id="@+id/aboutUniversity"
            android:layout_marginTop="20dp"
            android:textSize="25dp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorItmoLogoBlue"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_app_name"
            android:id="@+id/textView2"
            android:textColor="@color/colorItmoLogoBlue"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_marginTop="64dp"
            android:layout_below="@+id/aboutUniversity"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/version"
                android:id="@+id/textView3"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorItmoLogoBlue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="x.x"
                android:id="@+id/versionNumber"
                android:textColor="@color/colorItmoLogoBlue" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_contact_us"
            android:id="@+id/textView4"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/linearLayout2">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/vkButton"
                android:src="@drawable/vk_box"
                android:layout_marginRight="10dp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/gmailButton"
                android:src="@drawable/gmail"
                android:layout_marginRight="10dp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/githubButton"
                android:src="@drawable/github_circle"/>

        </LinearLayout>



    </RelativeLayout>
</ScrollView>
